# pytest_individual

./: .coverage  pyproject.toml
src/: taxes.py
tests/: test_taxes.py
