[tool.poetry]
name = "pytest-individual"
version = "0.1.0"
description = ""
authors = ["Pavel Artiev <arijev@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
